--- a/config/dunst/old/dunst.conf
+++ b/config/dunst/old/dunst.conf
@@ -27,7 +27,7 @@
     width = 300
 
     # The maximum height of a single notification, excluding the frame.
-    #height = 300
+    height = 300
 
     # Position the notification in the top right corner
     origin = top-right
@@ -64,10 +64,9 @@
     progress_bar_corner_radius = 4
 
     # Corner radius for the icon image.
-    icon_corner_radius = 10
+    icon_corner_radius = ${hypr_border}
 
     # Show how many messages are currently hidden (because of
-# All input methods uses the same config variable 'source'
     # notification_limit).
     indicate_hidden = yes
 
@@ -93,10 +92,10 @@
 
     # Defines width in pixels of frame around the notification window.
     # Set to 0 to disable.
-    frame_width = 2
+    frame_width = 5
 
     # Defines color of the frame around the notification window.
-    frame_color = "#a9b1d6"
+    #frame_color = "#eba0ac"
 
     # Size of gap to display between notifications - requires a compositor.
     # If value is greater than 0, separator_height will be ignored and a border
@@ -124,7 +123,7 @@
 
     ### Text ###
 
-    font = CaskaydiaCove Nerd Font Mono 10
+    font = mononoki Nerd Font 8
 
     # The spacing between lines.  If the height is smaller than the
     # font height, it will get raised to the font height.
@@ -204,7 +203,7 @@
     # Set icon theme (only used for recursive icon lookup)
     #icon_theme = Adwaita
     # You can also set multiple icon themes, with the leftmost one being used first.
-    icon_theme = "Tela-circle-dark"
+    icon_theme = "Tela-circle-dracula"
 
     # Align icons left/right/top/off
     icon_position = left
@@ -218,7 +217,7 @@
     max_icon_size = 128
 
     # Paths to default icons (only neccesary when not using recursive icon lookup)
-    icon_path = $HOME/.icons/Tela-circle-dark/16/actions:$HOME/.icons/Tela-circle-dark/16/apps:$HOME/.icons/Tela-circle-dark/16/devices:$HOME/.icons/Tela-circle-dark/16/mimetypes:$HOME/.icons/Tela-circle-dark/16/panel:$HOME/.icons/Tela-circle-dark/16/places:$HOME/.icons/Tela-circle-dark/16/status
+    icon_path = $HOME/.icons/Tela-circle-dracula/16/actions:$HOME/.icons/Tela-circle-dracula/16/apps:$HOME/.icons/Tela-circle-dracula/16/devices:$HOME/.icons/Tela-circle-dracula/16/mimetypes:$HOME/.icons/Tela-circle-dracula/16/panel:$HOME/.icons/Tela-circle-dracula/16/places:$HOME/.icons/Tela-circle-dracula/16/status
 
     ### History ###
 
@@ -251,7 +250,7 @@
     # corners.
     # The radius will be automatically lowered if it exceeds half of the
     # notification height to avoid clipping text and/or icons.
-    corner_radius = 10
+    corner_radius = ${hypr_border}
 
     # Ignore the dbus closeNotification message.
     # Useful to enforce the timeout set by dunst configuration. Without this
@@ -286,7 +285,6 @@
     # Defines list of actions for each mouse event
     # Possible values are:
     # * none: Don't do anything.
-# All input methods uses the same config variable 'source'
     # * do_action: Invoke the action determined by the action_name rule. If there is no
     #              such action, open the context menu.
     # * open_url: If the notification has exactly one url, open it. If there are multiple
@@ -322,7 +320,6 @@
 #    icon
 #    match_transient
 #    msg_urgency
-# All input methods uses the same config variable 'source'
 #    stack_tag
 #    summary
 #
@@ -425,7 +422,6 @@
 #    summary = *says*
 #    urgency = critical
 #
-# All input methods uses the same config variable 'source'
 #[twitter]
 #    appname = Pidgin
 #    summary = *twitter.com*
@@ -446,22 +442,8 @@
     format = "<span size="250%">%s</span>\n%b"
 
 [urgency_critical]
-    background = "#1a1b2680"
-    foreground = "#a9b1d6"
-    frame_color = "#a9b1d6"
+    background = "#f5e0dc"
+    foreground = "#1e1e2e"
+    frame_color = "#f38ba8"
     icon = "$HOME/.config/dunst/icons/critical.svg"
     timeout = 0
-
-[urgency_low]
-    background = "#1a1b2680"
-    foreground = "#a9b1d6"
-    frame_color = "#a9b1d6"
-    icon = "$HOME/.config/dunst/icons/hyprdots.svg"
-    timeout = 5
-
-[urgency_normal]
-    background = "#1a1b2680"
-    foreground = "#a9b1d6"
-    frame_color = "#a9b1d6"
-    icon = "$HOME/.config/dunst/icons/hyprdots.svg"
-    timeout = 5
