--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -1,162 +1,123 @@
 {
-    "layer": "top",
-    "position": "top",
-    "mod": "dock",
-    "height": 30,
-    "exclusive": true,
-    "passthrough": false,
-    "gtk-layer-shell": true,
-    "modules-left": ["custom/rofi","cpu","memory","clock"],
-    "modules-center": ["wlr/workspaces","hyprland/window"],
-    "modules-right": ["network","battery","bluetooth","pulseaudio","pulseaudio#microphone","custom/wallchange","tray","custom/power"],
+  "layer": "bottom",
+  "mod": "dock",
+  "position": "top",
+  "height": 16,
+  "spacing": 0,
+  "exclusive": true,
+  "gtk-layer-shell": true,
+  "passthrough": false,
+  "fixed-center": true,
+  "modules-left": ["hyprland/workspaces"],
+  "modules-center": ["hyprland/window"],
+  "modules-right": ["cpu","memory","temperature","pulseaudio", "battery", "clock", "tray"],
 
-
-// center modules //
-
-   "wlr/workspaces": {
-       "disable-scroll": true,
-       "all-outputs": true,
-       "on-click": "activate",
-       "persistent_workspaces": {
-           "1": [],
-           "2": [],
-           "3": [],
-           "4": [],
-           "5": [],
-           "6": [],
-           "7": [],
-           "8": [],
-           "9": [],
-           "10": []
-       }
-   },
-
-    "hyprland/window": {
-        "format": "  {}",
-        "separate-outputs": true,
-        "rewrite": {
-            "magnus@ayeka:(.*)": "$1 ",
-            "(.*) — Mozilla Firefox": "$1 󰈹",
-            "(.*)Mozilla Firefox": "Firefox 󰈹",
-            "(.*) — Thunar": "$1 󰉋",
-            "(.*)Spotify": "Spotify 󰓇",
-            "(.*)Steam": "Steam 󰓓"
-          }
-    },
-
-
-// left modules //
-
-    "custom/rofi": {
-        "format": "󰀻",
-        "on-click": "rofi -show drun",
-        "tooltip": false
-    },
-
-    "cpu": {
-        "interval": 10,
-        "format": "󰍛 {usage}%",
-        "format-alt": "{icon0}{icon1}{icon2}{icon3}",
-        "format-icons": ["▁", "▂", "▃", "▄", "▅", "▆", "▇", "█"]
-    },
-
-    "memory": {
-        "interval": 30,
-        "format": "󰾆 {percentage}%",
-        "format-alt": "󰾅 {used}GB",
-        "max-length": 10,
-        "tooltip": true,
-        "tooltip-format": " {used:0.1f}GB/{total:0.1f}GB"
-    },
-
-    "clock": {
-        "format": "{: %H:%M %p 󰃭 %a %d}",
-        "format-alt": "{:󰥔 %H:%M  %b %Y}",
-        "tooltip-format": "<tt><big>{calendar}</big></tt>"
-    },
-
-
-// right modules //
-
-    "network": {
-        // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "󰤨 {essid}",
-        "format-ethernet": "󱘖 Wired",
-        "tooltip-format": "󱘖 {ipaddr}  {bandwidthUpBytes}  {bandwidthDownBytes}",
-        "format-linked": "󱘖 {ifname} (No IP)",
-        "format-disconnected": " Disconnected",
-        "format-alt": "󰤨 {signalStrength}%",
-        "interval": 5
-    },
-
-    "bluetooth": {
-	    "format": "",
-	    "format-disabled": "", // an empty format will hide the module
-	    "format-connected": " {num_connections}",
-	    "tooltip-format": " {device_alias}",
-	    "tooltip-format-connected": "{device_enumerate}",
-	    "tooltip-format-enumerate-connected": " {device_alias}"
-    },
-
-    "pulseaudio": {
+      "hyprland/workspaces": {
+		"disable-scroll": true,
+        "on-click": "activate",
+        "all-outputs": true,
+        "active-only": false,
+        "persistent-workspaces": {
+            "1": [],
+            "2": [],
+            "3": [],
+            "4": [],
+            "5": [],
+            "6": [],
+        },
         "format": "{icon}",
-        "format-muted": "婢",
-        "on-click": "pavucontrol -t 3",
-        "on-click-middle": "~/.config/hypr/scripts/volumecontrol.sh m",
-        "on-scroll-up": "~/.config/hypr/scripts/volumecontrol.sh i",
-        "on-scroll-down": "~/.config/hypr/scripts/volumecontrol.sh d",
-        "tooltip-format": "{icon} {desc} {volume}%",
-        "scroll-step": 5,
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
-        }
+            "active": "<span font='14'>󰮯</span>",
+            "empty": "<span font='8'></span>",
+            "persistent": "<span font='14'>󰊠</span>",
+        },
     },
 
-    "pulseaudio#microphone": {
-        "format": "{format_source}",
-        "format-source": " {volume}%",
-        "format-source-muted": "",
-        "on-click": "pavucontrol -t 4",
-        "on-click-middle": "pamixer --default-source -t",
-        "on-scroll-up": "pamixer --default-source -i 5",
-        "on-scroll-down": "pamixer --default-source -d 5",
-        "scroll-step": 5
+
+  "tray": {
+    "show-passive-items": true,
+    "icon-size": 15,
+    "spacing": 10
+  },
+
+  "battery": {
+    "bat": "BAT1",
+    "adapter": "ADP0",
+    "interval": 1,
+    "states": {
+      "warning": 30,
+      "critical": 15
+    },
+    "max-length": 20,
+    "format": "{icon}{capacity}%",
+    "format-warning": "{icon}{capacity}%",
+    "format-critical": "{icon}{capacity}%",
+    "format-charging": "<span foreground='#26ff55'> {capacity} %</span>",
+    "format-plugged": "<span foreground='#26ff55'>  {capacity}%</span>",
+    "format-alt": "{icon} {time}",
+    "format-full": "<span foreground='#26ff55'> {capacity} %</span>",
+        "format-icons": [
+            "󰁻 ",
+            "󰁽 ",
+            "󰁿 ",
+            "󰂁 ",
+            "󰁹 "
+        ]
+  },
+
+  "clock": {
+    "format": "<span color='#6bfffd'> </span>{:%H:%M}",
+    "format-alt": "<span color='#ff9854'> </span>{:%a %b %d}",
+    "tooltip-format": "<big>{:%B %Y}</big>\n<tt><small>{calendar}</small></tt>"
+  },
+
+  "cpu": {
+    "format": "  {usage}%",
+    "tooltip": true,
+    "interval": 1
+  },
+
+  "memory": {
+    "format": "  {used:0.2f}G"
+  },
+
+  "pulseaudio": {
+    "format": "{icon} {volume}%",
+    "format-muted": "  muted",
+    "format-icons": {
+      "headphone": " ",
+      "hands-free": "",
+      "headset": "",
+      "phone": "",
+      "portable": "",
+      "car": "",
+      "default": [
+                "󰕿",
+                "󰖀",
+                "󰕾"
+            ]
+    },
+    "on-click": "pavucontrol"
+  },
+  "custom/logo": {
+    "format": "<span font='18'></span>",
+    "tooltip": false
+  },
+
+  "custom/sep": {
+    "format": "|",
+    "tooltip": false
+  },
+
+      "temperature": {
+        "interval": 20,
+        "format": " {}°C",
+        "max-length": 10
     },
 
-   "custom/wallchange": {
-        "format": "{}",
-        "on-click": "~/.config/hypr/scripts/changeWallpaper.sh",
-        "interval" : 86400, // once every day
-        "tooltip": false
-    },
-
-"battery": {
-        	"states": {
-            		"warning": 30,
-            		"critical": 15
-        	},
-        	"format": "{icon} {capacity}%",
-        	"format-charging": " {capacity}%",
-        	"format-plugged": "{capacity}%",
-        	"format-alt": "{time} {icon}",
-        	"format-full": " {capacity}%",
-        	"format-icons": ["", "", ""]
-},
-
-          "tray": {
-        "icon-size": 15,
-        "spacing": 5
-    },
-
-    "custom/power": {
-        "format": "",
-        "on-click": "wlogout",
-        "tooltip": false
-    }
+  "custom/power": {
+    "tooltip": false,
+    "on-click": "wlogout -p layer-shell &",
+    "format": " "
+  }
 }
